style(responsive): make layout adapt to mobile and tablet screens

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <p>Botostart.ir | Products Page</p>
+      <p>Products Page</p>
     </header>
     <main>
       <div id="search">
